[package]
name = "wasm-devtools-toolkit"
version = "0.1.0"
edition = "2021"
description = "A high-performance WASM DevTools library written in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
cssparser = "0.33"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Element",
  "Document",
  "Window",
]

# Optimize heavily for WASM binary size (< 200KB target)
[profile.release]
opt-level = 'z'       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce code generation units to maximize optimization
panic = 'abort'       # Remove unwinding code to shrink size
strip = true          # Strip debug symbols and sections
